fix overflow in shine

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,14 @@ header {
   position: relative;
     top: 40vh;
 }
+.shine-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+}
 .shine {
   background: #354349;
   filter: blur(35px);
