--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
 }
 
 body::after {
